--- a/Thunderstore/manifest.json
+++ b/Thunderstore/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Queue_Me_Maybe",
   "version_number": "1.0.0",
-  "website_url": "https://discord.gg/pdHgy6Bsng",
+  "website_url": "https://github.com/AzumattDev/QueueMeMaybe",
   "description": "This mod allows you to queue up weapon changes during attacks, ensuring that your requests to switch weapons won't be ignored.",
   "dependencies": [
     "denikson-BepInExPack_Valheim-5.4.2100"
